# haskell-journey

./: .gitignore  README.md  flake.nix
src/: Map  Map.hs  ReadTypes.hs  ffi.hs  list  list.hs  main  main.hs  maybe.hs  monad  monad.hs  monoid.hs  nat.hs  nonempty.hs  teng.hs  tree.hs  type.hs
src/FFI/: Bessel.hs  Bessel.hsc
src/Persistent/: CHANGELOG.md  cabal.project  persistent.cabal
src/Persistent/app/: Main.hs
src/mooc/part1/: Set1.hs  Set2a.hs  Set2b.hs
src/rest-api/: CHANGELOG.md  flake.nix  rest-api.cabal
src/rest-api/app/: Main.hs
src/rest-api/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/tutorial/: Main.hs  Server.hs  tutorial.cabal
src/tutorial/dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
