cabal-version:       2.2
name:                tutorial
version:             0.10
synopsis:            The servant tutorial
description:
  The servant tutorial can be found at
  <http://docs.servant.dev/>
homepage:            http://docs.servant.dev/
category:            Servant, Documentation
license:             BSD-3-Clause
license-file:        LICENSE
author:              Servant Contributors
maintainer:          haskell-servant-maintainers@googlegroups.com
build-type:          Simple

executable tutorial-server
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -pgmL markdown-unlit
  -- Packages `servant` depends on.
  -- We don't need to specify bounds here as this package is never released.
  build-depends:
      base >= 4.7 && <5
    , aeson
    , attoparsec
    , base-compat
    , bytestring
    , containers
    , directory
    , http-api-data
    , http-client
    , http-media
    , http-types
    , mtl
    , string-conversions
    , text
    , transformers
    , wai
    , warp < 3.4

  -- Servant dependencies
  build-depends:
       servant
     , servant-server
     , servant-client
     , servant-docs

  -- Other dependencies: Lower bound around what is in the latest Stackage LTS.
  -- Here can be exceptions if we really need features from the newer versions.
  build-depends:
      blaze-html   >= 0.9.0.1 && < 0.10
    , blaze-markup >= 0.8.0.0 && < 0.9
    , cookie       >= 0.4.3   && < 0.6
    , js-jquery    >= 3.3.1   && < 3.8
    , lucid        >= 2.9.11  && < 2.12
    , random       >= 1.1     && < 1.4
    , servant-js   >= 0.9     && < 0.10
    , time         >= 1.6.0.1 && < 1.15

  -- For legacy tools, we need to specify build-depends too
  build-depends: markdown-unlit >= 0.5.0 && <0.7
  build-tool-depends: markdown-unlit:markdown-unlit >= 0.5.0 && <0.7
